add mappers